--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -1,20 +1,20 @@
 {
   "about": {
-    "description": "movie-web - это веб-приложение, которое ищет в интернете потоки. Команда стремится к минималистичному подходу к потреблению контента.",
+    "description": "WatchTV - это веб-приложение, которое ищет в интернете потоки. Команда стремится к минималистичному подходу к потреблению контента.",
     "faqTitle": "Общие вопросы",
     "q1": {
-      "body": "movie-web не размещает у себя никакого контента. Когда вы нажимаете на что-то для просмотра, в интернете происходит поиск выбранного медиа файла (на экране загрузки и во вкладке \"Видео источники\" вы можете увидеть, какой источник вы используете). Медиа файлы никогда не загружается на movie-web, все происходит через этот механизм поиска.",
+      "body": "WatchTV не размещает у себя никакого контента. Когда вы нажимаете на что-то для просмотра, в интернете происходит поиск выбранного медиа файла (на экране загрузки и во вкладке \"Видео источники\" вы можете увидеть, какой источник вы используете). Медиа файлы никогда не загружается на WatchTV, все происходит через этот механизм поиска.",
       "title": "Откуда берётся контент?"
     },
     "q2": {
-      "body": "Невозможно запросить сериал или фильм, movie-web не управляет никаким контентом. Весь контент просматривается через источники в интернете.",
+      "body": "Невозможно запросить сериал или фильм, WatchTV не управляет никаким контентом. Весь контент просматривается через источники в интернете.",
       "title": "Где я могу запросить показ сериала или фильма?"
     },
     "q3": {
       "body": "Наши результаты поиска основаны на базе данных The Movie Database (TMDB) и отображаются вне зависимости от того, есть ли в наших источниках соответствующий контент.",
       "title": "В результатах поиска отображается сериал или фильм, но почему я не могу воспроизвести его?"
     },
-    "title": "О movie-web"
+    "title": "О WatchTV"
   },
   "actions": {
     "copied": "Скопировано",
@@ -79,7 +79,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Отказ от ответственности",
-      "disclaimerText": "movie-web не размещает никаких файлов, а лишь предоставляет ссылки на сторонние сервисы. Юридические вопросы следует решать с владельцами файлов и поставщиками услуг. movie-web не несёт ответственности за любые медиа файлы, показанные поставщиками видео."
+      "disclaimerText": "WatchTV не размещает никаких файлов, а лишь предоставляет ссылки на сторонние сервисы. Юридические вопросы следует решать с владельцами файлов и поставщиками услуг. WatchTV не несёт ответственности за любые медиа файлы, показанные поставщиками видео."
     },
     "links": {
       "discord": "Discord",
@@ -89,11 +89,11 @@
     "tagline": "Смотрите любимые сериалы и фильмы с помощью этого приложения для потокового вещания с открытым исходным кодом."
   },
   "global": {
-    "name": "movie-web",
+    "name": "WatchTV",
     "pages": {
       "about": "О",
       "dmca": "DMCA",
-      "pagetitle": "{{title}} - movie-web",
+      "pagetitle": "{{title}} - WatchTV",
       "settings": "Настройки"
     }
   },
