--- a/src/assets/locales/ar.json
+++ b/src/assets/locales/ar.json
@@ -1,20 +1,20 @@
 {
   "about": {
-    "description": "movie-web هو تطبيق ويب يبحث في الإنترنت عن بثوث. يهدف الفريق إلى تبني نهج معظمه بسيط في استهلاك المحتوى.",
+    "description": "WatchTV هو تطبيق ويب يبحث في الإنترنت عن بثوث. يهدف الفريق إلى تبني نهج معظمه بسيط في استهلاك المحتوى.",
     "faqTitle": "الأسئلة الشائعة",
     "q1": {
-      "body": "لا يستضيف movie-web أي محتوى. عندما تنقر فوق شيء للمشاهدة، يتم البحث على الإنترنت عن الوسائط المحددة (يمكنك رؤية المصدر الذي تستخدمه على شاشة التحميل وفي علامة تبويب \"مصادر الفيديو\"). لا يتم رفع الوسائط أبدًا عن طريق movie-web، كل شيء يتم من خلال آلية البحث هذه.",
+      "body": "لا يستضيف WatchTV أي محتوى. عندما تنقر فوق شيء للمشاهدة، يتم البحث على الإنترنت عن الوسائط المحددة (يمكنك رؤية المصدر الذي تستخدمه على شاشة التحميل وفي علامة تبويب \"مصادر الفيديو\"). لا يتم رفع الوسائط أبدًا عن طريق WatchTV، كل شيء يتم من خلال آلية البحث هذه.",
       "title": "من أين يأتي المحتوى؟"
     },
     "q2": {
-      "body": "لا يمكن طلب عرض أو فيلم، لأن movie-web لا يدير أي محتوى. يتم مشاهدة جميع المحتويات من خلال مصادر على الإنترنت.",
+      "body": "لا يمكن طلب عرض أو فيلم، لأن WatchTV لا يدير أي محتوى. يتم مشاهدة جميع المحتويات من خلال مصادر على الإنترنت.",
       "title": "أين يمكنني طلب مسلسل أو فلم؟"
     },
     "q3": {
       "body": "نتائج البحث لدينا مدعومة بقاعدة بيانات الأفلام (TMDB) وتظهر بغض النظر عما إذا كانت مصادرنا تتضمن فعليًا المحتوى أم لا.",
       "title": "تعرِضُ نتائجُ البحثِ الخاصِّ بالعرض أو الفيلم اللذي أريد، لكن لماذا لا يمكنني تشغيله؟"
     },
-    "title": "حول movie-web"
+    "title": "حول WatchTV"
   },
   "actions": {
     "copied": "تم النسخ",
@@ -80,7 +80,7 @@
   "footer": {
     "legal": {
       "disclaimer": "تنويه",
-      "disclaimerText": "لا يستضيف movie-web أي ملفات، بل يقوم بالربط مع خدمات طرف ثالث. يجب معالجة المشاكل القانونية مع مضيفي الملفات والمزودين. لا يتحمل movie-web مسؤولية أي ملفات يعرضها مزودو الفيديو."
+      "disclaimerText": "لا يستضيف WatchTV أي ملفات، بل يقوم بالربط مع خدمات طرف ثالث. يجب معالجة المشاكل القانونية مع مضيفي الملفات والمزودين. لا يتحمل WatchTV مسؤولية أي ملفات يعرضها مزودو الفيديو."
     },
     "links": {
       "discord": "ديسكورد",
@@ -90,12 +90,12 @@
     "tagline": "شاهد عروضك وأفلامك المفضلة باستخدام تطبيق البث مفتوح المصدر هذا."
   },
   "global": {
-    "name": "movie-web",
+    "name": "WatchTV",
     "pages": {
       "about": "حَول",
       "dmca": "DMCA",
       "login": "تسجيل الدخول",
-      "pagetitle": "\"{{title}} - movie-web\"",
+      "pagetitle": "\"{{title}} - WatchTV\"",
       "register": "إنشاء حساب",
       "settings": "الإعدادات"
     }
@@ -178,11 +178,11 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "يتم أخذ التنزيلات مباشرةً من قبل مقدم الخدمة. movie-web لاسيطرة له على كيفية توفير تلك التنزيلات.",
+        "disclaimer": "يتم أخذ التنزيلات مباشرةً من قبل مقدم الخدمة. WatchTV لاسيطرة له على كيفية توفير تلك التنزيلات.",
         "downloadPlaylist": "تنزيل قائمة التشغيل",
         "downloadSubtitle": "تنزيل مقاطع الترجمة الحالية",
         "downloadVideo": "تنزيل الفيديو",
-        "hlsDisclaimer": "يتم أخذ التنزيلات مباشرة من مزود الخدمة. movie-web ليس المتحكم في كيفية توفير التنزيلات. يرجى ملاحظة أنك تقوم بتنزيل قائمة تشغيل HLS، وهذا أمر يتطلب ان تكون على دراية بتقنيات متقدمة لبث الوسائط.",
+        "hlsDisclaimer": "يتم أخذ التنزيلات مباشرة من مزود الخدمة. WatchTV ليس المتحكم في كيفية توفير التنزيلات. يرجى ملاحظة أنك تقوم بتنزيل قائمة تشغيل HLS، وهذا أمر يتطلب ان تكون على دراية بتقنيات متقدمة لبث الوسائط.",
         "onAndroid": {
           "1": "للتنزيل على أندرويد، أنقر زر التنزيل وفي الصفحة الموالية <bold>إضغط باستمرار</bold> على الفيديو، وبعدها اختر <bold>حفظ</bold>.",
           "shortTitle": "تنزيل / Android",
@@ -312,7 +312,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "مرحبًا بكم في صفحة movie-web الخاصة بالتواصل حول قانون الألفية للملكية الرقمية (DMCA) ! نحن نحترم حقوق الملكية الفكرية ونرغب في التعامل بسرعة مع أي مسألة تخص حقوق الطبع والنشر. إن كنت تعتقد أن أيا من أعمالك المحميو بحقوق الطبع والنشر قد تم استخدامها بشكل غير لائق على منصتنا، رجاءً أرسل إشعارا مفصلا إلى البريد الإلكتروني أدناه. يرجى تضمين وصف للمواد المحمية بحقوق الطبع والنشر، وكذا طريقةً للتواصل معك، إضافة إلى تصريح بمصداقية طلبك. نحن ملتزمون بحل هذه القضايا بسرعة ونقدر تعاونكم في الحفاظ على movie-web كمكان يحترم الإبداع وحقوق الطبع والنشر.",
+      "text": "مرحبًا بكم في صفحة WatchTV الخاصة بالتواصل حول قانون الألفية للملكية الرقمية (DMCA) ! نحن نحترم حقوق الملكية الفكرية ونرغب في التعامل بسرعة مع أي مسألة تخص حقوق الطبع والنشر. إن كنت تعتقد أن أيا من أعمالك المحميو بحقوق الطبع والنشر قد تم استخدامها بشكل غير لائق على منصتنا، رجاءً أرسل إشعارا مفصلا إلى البريد الإلكتروني أدناه. يرجى تضمين وصف للمواد المحمية بحقوق الطبع والنشر، وكذا طريقةً للتواصل معك، إضافة إلى تصريح بمصداقية طلبك. نحن ملتزمون بحل هذه القضايا بسرعة ونقدر تعاونكم في الحفاظ على WatchTV كمكان يحترم الإبداع وحقوق الطبع والنشر.",
       "title": "DMCA"
     },
     "loadingApp": "جار تحميل التطبيق",
