--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -1,20 +1,20 @@
 {
   "about": {
-    "description": "movie-web is a web application that searches the internet for streams. The team aims for a mostly minimalistic approach to consuming content.",
+    "description": "WatchTV is a web application that searches the internet for streams. The team aims for a mostly minimalistic approach to consuming content.",
     "faqTitle": "Common questions",
     "q1": {
-      "body": "movie-web does not host any content. When you click on something to watch, the internet is searched for the selected media (On the loading screen and in the 'video sources' tab you can see which source you're using). Media never gets uploaded by movie-web, everything is through this searching mechanism.",
+      "body": "WatchTV does not host any content. When you click on something to watch, the internet is searched for the selected media (On the loading screen and in the 'video sources' tab you can see which source you're using). Media never gets uploaded by WatchTV, everything is through this searching mechanism.",
       "title": "Where does the content come from?"
     },
     "q2": {
-      "body": "It's not possible to request a show or movie, movie-web does not manage any content. All content is viewed through sources on the internet.",
+      "body": "It's not possible to request a show or movie, WatchTV does not manage any content. All content is viewed through sources on the internet.",
       "title": "Where can I request a show or movie?"
     },
     "q3": {
       "body": "Our search results are powered by The Movie Database (TMDB) and display regardless of whether our sources actually have the content.",
       "title": "The search results display the show or movie, why can't I play it?"
     },
-    "title": "About movie-web"
+    "title": "About WatchTV"
   },
   "actions": {
     "copied": "Copied",
@@ -80,7 +80,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Disclaimer",
-      "disclaimerText": "movie-web does not host any files, it merely links to 3rd party services. Legal issues should be taken up with the file hosts and providers. movie-web is not responsible for any media files shown by the video providers."
+      "disclaimerText": "WatchTV does not host any files, it merely links to 3rd party services. Legal issues should be taken up with the file hosts and providers. WatchTV is not responsible for any media files shown by the video providers."
     },
     "links": {
       "discord": "Discord",
@@ -90,12 +90,12 @@
     "tagline": "Watch your favourite shows and movies with this open source streaming app."
   },
   "global": {
-    "name": "movie-web",
+    "name": "WatchTV",
     "pages": {
       "about": "About",
       "dmca": "DMCA",
       "login": "Login",
-      "pagetitle": "{{title}} - movie-web",
+      "pagetitle": "{{title}} - WatchTV",
       "register": "Register",
       "settings": "Settings",
       "onboarding": "Setup"
@@ -169,7 +169,7 @@
     "turnstile": {
       "verifyingHumanity": "Verifying your humanity...",
       "title": "We need to verify that you're human.",
-      "description": "Please verify that you are human by completing the Captcha on the right. This is to keep movie-web safe!",
+      "description": "Please verify that you are human by completing the Captcha on the right. This is to keep WatchTV safe!",
       "error": "Failed to verify your humanity. Please try again."
     },
     "back": {
@@ -228,11 +228,11 @@
         "unknownLanguage": "Unknown"
       },
       "downloads": {
-        "disclaimer": "Downloads are taken directly from the provider. movie-web does not have control over how the downloads are provided.",
+        "disclaimer": "Downloads are taken directly from the provider. WatchTV does not have control over how the downloads are provided.",
         "downloadSubtitle": "Download current subtitle",
         "downloadPlaylist": "Download playlist",
         "downloadVideo": "Download video",
-        "hlsDisclaimer": "Downloads are taken directly from the provider. movie-web does not have control over how the downloads are provided.<br /><br />Please note that you are downloading an HLS playlist, <bold>it is not recommended to download if you are not familiar with advanced streaming formats</bold>. Try different sources for different formats.",
+        "hlsDisclaimer": "Downloads are taken directly from the provider. WatchTV does not have control over how the downloads are provided.<br /><br />Please note that you are downloading an HLS playlist, <bold>it is not recommended to download if you are not familiar with advanced streaming formats</bold>. Try different sources for different formats.",
         "onAndroid": {
           "1": "To download on Android, click the download button then, on the new page, <bold>tap and hold</bold> on the video, then select <bold>save</bold>.",
           "shortTitle": "Download / Android",
@@ -330,7 +330,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "Welcome to movie-web's DMCA contact page! We respect intellectual property rights and want to address any copyright concerns swiftly. If you believe your copyrighted work has been improperly used on our platform, please send a detailed DMCA notice to the email below. Please include a description of the copyrighted material, your contact details, and a statement of good faith belief. We're committed to resolving these matters promptly and appreciate your cooperation in keeping movie-web a place that respects creativity and copyrights.",
+      "text": "Welcome to WatchTV's DMCA contact page! We respect intellectual property rights and want to address any copyright concerns swiftly. If you believe your copyrighted work has been improperly used on our platform, please send a detailed DMCA notice to the email below. Please include a description of the copyrighted material, your contact details, and a statement of good faith belief. We're committed to resolving these matters promptly and appreciate your cooperation in keeping WatchTV a place that respects creativity and copyrights.",
       "title": "DMCA"
     },
     "loadingApp": "Loading application",
@@ -469,7 +469,7 @@
   },
   "onboarding": {
     "start": {
-      "title": "Let's get you setup with movie-web",
+      "title": "Let's get you setup with WatchTV",
       "explainer": "To get the best streams possible. You will need to choose which streaming method you want to use.",
       "options": {
         "proxy": {
