--- a/src/assets/locales/es.json
+++ b/src/assets/locales/es.json
@@ -1,20 +1,20 @@
 {
   "about": {
-    "description": "movie-web es una aplicación web que busca transmisiones en internet. El equipo tiene como objetivo un enfoque principalmente minimalista para consumir contenido.",
+    "description": "WatchTV es una aplicación web que busca transmisiones en internet. El equipo tiene como objetivo un enfoque principalmente minimalista para consumir contenido.",
     "faqTitle": "Preguntas frecuentes",
     "q1": {
-      "body": "movie-web no aloja ningún contenido. Cuando haces clic en algo para ver, se busca en internet el medio seleccionado (En la pantalla de carga y en la pestaña 'fuentes de vídeo' puedes ver qué fuente estás utilizando). El contenido nunca se carga en movie-web, todo se realiza a través de este mecanismo de búsqueda.",
+      "body": "WatchTV no aloja ningún contenido. Cuando haces clic en algo para ver, se busca en internet el medio seleccionado (En la pantalla de carga y en la pestaña 'fuentes de vídeo' puedes ver qué fuente estás utilizando). El contenido nunca se carga en WatchTV, todo se realiza a través de este mecanismo de búsqueda.",
       "title": "¿De dónde proviene el contenido?"
     },
     "q2": {
-      "body": "No es posible solicitar una serie o película, movie-web no gestiona ningún contenido. Todo el contenido se ve a través de fuentes en internet.",
+      "body": "No es posible solicitar una serie o película, WatchTV no gestiona ningún contenido. Todo el contenido se ve a través de fuentes en internet.",
       "title": "¿Dónde puedo solicitar una serie o película?"
     },
     "q3": {
       "body": "Nuestros resultados de búsqueda están alimentados por The Movie Database (TMDB) y se muestran independientemente de si nuestras fuentes realmente tienen el contenido.",
       "title": "Los resultados de búsqueda muestran la serie o película, ¿por qué no puedo reproducirla?"
     },
-    "title": "Acerca de movie-web"
+    "title": "Acerca de WatchTV"
   },
   "actions": {
     "copied": "Copiado",
@@ -80,7 +80,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Descargo de responsabilidad",
-      "disclaimerText": "movie-web no aloja ningún archivo, simplemente enlaza a servicios de terceros. Los problemas legales deben ser tratados con los proveedores de archivos y servicios. movie-web no se hace responsable de los archivos multimedia mostrados por los proveedores de vídeo."
+      "disclaimerText": "WatchTV no aloja ningún archivo, simplemente enlaza a servicios de terceros. Los problemas legales deben ser tratados con los proveedores de archivos y servicios. WatchTV no se hace responsable de los archivos multimedia mostrados por los proveedores de vídeo."
     },
     "links": {
       "discord": "Discord",
@@ -90,13 +90,13 @@
     "tagline": "Ve tus series y películas favoritas con esta aplicación de transmisión de código abierto."
   },
   "global": {
-    "name": "movie-web",
+    "name": "WatchTV",
     "pages": {
       "about": "Acerca de",
       "dmca": "DMCA",
       "login": "Iniciar sesión",
       "onboarding": "Configurar",
-      "pagetitle": "{{title}} - movie-web",
+      "pagetitle": "{{title}} - WatchTV",
       "register": "Registrarse",
       "settings": "Configuración"
     }
@@ -221,7 +221,7 @@
           "title": "Proxy personalizado"
         }
       },
-      "title": "Vamos a configurar movie-web"
+      "title": "Vamos a configurar WatchTV"
     }
   },
   "overlays": {
@@ -237,11 +237,11 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "Las descargas se realizan directamente desde el proveedor. movie-web no tiene control sobre cómo se proporcionan las descargas.",
+        "disclaimer": "Las descargas se realizan directamente desde el proveedor. WatchTV no tiene control sobre cómo se proporcionan las descargas.",
         "downloadPlaylist": "Descargar lista de reproducción",
         "downloadSubtitle": "Descargar subtítulo actual",
         "downloadVideo": "Descargar vídeo",
-        "hlsDisclaimer": "Las descargas se realizan directamente del proveedor. movie-web no tiene control sobre cómo se proporcionan las descargas. <br /><br />Tenga en cuenta que está descargando una lista de reproducción HLS, <bold>dirigida a usuarios familiarizados con la transmisión multimedia avanzada.</bold>",
+        "hlsDisclaimer": "Las descargas se realizan directamente del proveedor. WatchTV no tiene control sobre cómo se proporcionan las descargas. <br /><br />Tenga en cuenta que está descargando una lista de reproducción HLS, <bold>dirigida a usuarios familiarizados con la transmisión multimedia avanzada.</bold>",
         "onAndroid": {
           "1": "Para descargar en Android, haz clic en el botón de descarga y luego, en la nueva página, <bold>mantén presionado</bold> el vídeo y selecciona <bold>guardar</bold>.",
           "shortTitle": "Descargar / Android",
@@ -384,7 +384,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Por favor, confirma que eres humano completando el Captcha. Esto es para mantener movie-web seguro!",
+      "description": "Por favor, confirma que eres humano completando el Captcha. Esto es para mantener WatchTV seguro!",
       "error": "Ha habido un error al verificar tu humanidad. Por favor, prueba de nuevo.",
       "title": "Necesitamos verificar que eres humano.",
       "verifyingHumanity": "Verificando tu hunanidad…"
@@ -392,7 +392,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "¡Bienvenido a la página de contacto DMCA de movie-web! Respetamos los derechos de propiedad intelectual y queremos abordar cualquier problema de derechos de autor de manera rápida. Si cree que su trabajo con derechos de autor se ha utilizado incorrectamente en nuestra plataforma, envíe un aviso DMCA detallado al correo electrónico que se muestra a continuación. Incluya una descripción del material con derechos de autor, sus datos de contacto y una declaración de buena fe. Estamos comprometidos a resolver estos asuntos de manera pronta y agradecemos su cooperación para mantener a movie-web como un lugar que respeta la creatividad y los derechos de autor.",
+      "text": "¡Bienvenido a la página de contacto DMCA de WatchTV! Respetamos los derechos de propiedad intelectual y queremos abordar cualquier problema de derechos de autor de manera rápida. Si cree que su trabajo con derechos de autor se ha utilizado incorrectamente en nuestra plataforma, envíe un aviso DMCA detallado al correo electrónico que se muestra a continuación. Incluya una descripción del material con derechos de autor, sus datos de contacto y una declaración de buena fe. Estamos comprometidos a resolver estos asuntos de manera pronta y agradecemos su cooperación para mantener a WatchTV como un lugar que respeta la creatividad y los derechos de autor.",
       "title": "DMCA"
     },
     "loadingApp": "Cargando la aplicación",
