--- a/src/assets/locales/fa.json
+++ b/src/assets/locales/fa.json
@@ -241,7 +241,7 @@
         "downloadPlaylist": "دانلود لیست پخش",
         "downloadSubtitle": "دانلود زیرنویس فعلی",
         "downloadVideo": "دانلود ویدیو",
-        "hlsDisclaimer": "دانلودها مستقیماً از ارائه دهنده گرفته می شوند. movie-web کنترلی بر نحوه ارائه دانلودها ندارد.<br /><br />لطفاً توجه داشته باشید که در حال دانلود یک لیست پخش HLS هستید، اگر با فرمت های پخش جریانی پیشرفته آشنایی ندارید دانلود آن <bold> توصیه نمی شود. </bold>. منابع مختلف را برای فرمت های مختلف امتحان کنید.",
+        "hlsDisclaimer": "دانلودها مستقیماً از ارائه دهنده گرفته می شوند. WatchTV کنترلی بر نحوه ارائه دانلودها ندارد.<br /><br />لطفاً توجه داشته باشید که در حال دانلود یک لیست پخش HLS هستید، اگر با فرمت های پخش جریانی پیشرفته آشنایی ندارید دانلود آن <bold> توصیه نمی شود. </bold>. منابع مختلف را برای فرمت های مختلف امتحان کنید.",
         "onAndroid": {
           "1": "برای دانلود در اندروید، روی دکمه دانلود کلیک کنید و سپس در صفحه جدید، روی ویدیو <bold>ضربه بزنید و نگه دارید</bold>، سپس <bold>ذخیره</bold> را انتخاب کنید.",
           "shortTitle": "دانلود / اندروید",
