--- a/src/assets/locales/gl.json
+++ b/src/assets/locales/gl.json
@@ -1,20 +1,20 @@
 {
   "about": {
-    "description": "movie-web é unha aplicación web que busca transmisións na rede. O equipo ten como obxectivo manter un enfoque principalmente minimalista para consumir os contidos.",
+    "description": "WatchTV é unha aplicación web que busca transmisións na rede. O equipo ten como obxectivo manter un enfoque principalmente minimalista para consumir os contidos.",
     "faqTitle": "Preguntas frecuentes",
     "q1": {
-      "body": "movie-web non aloxa ningún contido. Cando premes en algo para ver o contenido, búscase en internet o medio seleccionado. (Na pantalla de carga e na lapela 'fontes de video' podes ver que fonte se está a empregar. O contido nunca se carga en movie-web, todo realízase a través deste método de busca.",
+      "body": "WatchTV non aloxa ningún contido. Cando premes en algo para ver o contenido, búscase en internet o medio seleccionado. (Na pantalla de carga e na lapela 'fontes de video' podes ver que fonte se está a empregar. O contido nunca se carga en WatchTV, todo realízase a través deste método de busca.",
       "title": "De onde proveñen os contidos?"
     },
     "q2": {
-      "body": "Non é posible solicitar unha película. movie-web non xestiona ningún contido. Todo o contido é xestionado a través de fontes na rede.",
+      "body": "Non é posible solicitar unha película. WatchTV non xestiona ningún contido. Todo o contido é xestionado a través de fontes na rede.",
       "title": "Onde poido solicitar unha película a engadir?"
     },
     "q3": {
       "body": "Os nosos resultados de busqueda proveñen de The Movie Database (TMDB) e se mostran independentemente de se as nosas fontes multimedia teñen realmente o contido.",
       "title": "Os resultados da busca mostran a serie ou película... Por qué non poido reproducila?"
     },
-    "title": "Acerca de movie-web"
+    "title": "Acerca de WatchTV"
   },
   "actions": {
     "copied": "Copiado",
@@ -80,7 +80,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Descargo de responsabilidade",
-      "disclaimerText": "movie-web non aloxa ningún arquivo, simplemente enlaza con servizos de terceiros. Os problemas legais deben ser tratados cós proovedores de arquivos e servizos. movie-web non se fai responsable dos arquivos multimedia mostrados polos provedores de video."
+      "disclaimerText": "WatchTV non aloxa ningún arquivo, simplemente enlaza con servizos de terceiros. Os problemas legais deben ser tratados cós proovedores de arquivos e servizos. WatchTV non se fai responsable dos arquivos multimedia mostrados polos provedores de video."
     },
     "links": {
       "discord": "Discord",
@@ -90,12 +90,12 @@
     "tagline": "Disfruta das túas series e películas favoritas con esta aplicación de transmisión de código aberto."
   },
   "global": {
-    "name": "movie-web",
+    "name": "WatchTV",
     "pages": {
       "about": "Acerca de",
       "dmca": "DMCA",
       "login": "Iniciar sesión",
-      "pagetitle": "{{title}} - movie-web",
+      "pagetitle": "{{title}} - WatchTV",
       "register": "Rexistrarse",
       "settings": "Configuración"
     }
@@ -178,11 +178,11 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "As descargas proveñen do provedor. movie-web non ten control sobre as descargas e a súa procedencia.",
+        "disclaimer": "As descargas proveñen do provedor. WatchTV non ten control sobre as descargas e a súa procedencia.",
         "downloadPlaylist": "Descargar lista",
         "downloadSubtitle": "Descargar subtítulos actuais",
         "downloadVideo": "Descargar video",
-        "hlsDisclaimer": "As descargas realizanse directamente dende o proovedor. movie-web non ten control sobre como se xestionan as descargas. Ten en conta que estás a descargar unha lista de reproducción HLS, dirixidos a usuarios familiarizados coa transmisión multimedia avanzada.",
+        "hlsDisclaimer": "As descargas realizanse directamente dende o proovedor. WatchTV non ten control sobre como se xestionan as descargas. Ten en conta que estás a descargar unha lista de reproducción HLS, dirixidos a usuarios familiarizados coa transmisión multimedia avanzada.",
         "onAndroid": {
           "1": "Para descargar en Android, fai click no botón de descarga e despois, na nova páxina, <bold>mantén presionado</bold>o vídeo e selecciona <bold>gardar</bold>.",
           "shortTitle": "Descargar / Android",
@@ -314,7 +314,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Por favor, verifica que eres un humán completando o Captcha. Isto é para mantee movie-web seguro!",
+      "description": "Por favor, verifica que eres un humán completando o Captcha. Isto é para mantee WatchTV seguro!",
       "error": "Houbo un erro ao verificar a túa humanidade. Por favor, volve a intentalo.",
       "title": "Necesitamos verificar que realmente eres un humán.",
       "verifyingHumanity": "Verificando a túa humanidade…"
@@ -322,7 +322,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "Benvido/a á páxona de contacto DMA de movie-web! Respetamos os dereitos de propiedade intelectual e queremos abordar calqueiro problema de dereitos de autor de maneira más rápida. Se crees que o teu traballo con dereitos de autor está sendo empregado incorrectamente na nosa plataforma, envñia un aviso DMCA detallado ao correo electrónico que se mostra a continuación. Inclue unha descripción do material con dereitos de autor, os seus datos de contacto e unha declaración de boa fé. Estamos comprometidos a resolver estos asuntos o máis rápido posible e agradecemos a túa cooperación para manter a movie-web como un lugar que respeta a creatividade e os dereitos de autor.",
+      "text": "Benvido/a á páxona de contacto DMA de WatchTV! Respetamos os dereitos de propiedade intelectual e queremos abordar calqueiro problema de dereitos de autor de maneira más rápida. Se crees que o teu traballo con dereitos de autor está sendo empregado incorrectamente na nosa plataforma, envñia un aviso DMCA detallado ao correo electrónico que se mostra a continuación. Inclue unha descripción do material con dereitos de autor, os seus datos de contacto e unha declaración de boa fé. Estamos comprometidos a resolver estos asuntos o máis rápido posible e agradecemos a túa cooperación para manter a WatchTV como un lugar que respeta a creatividade e os dereitos de autor.",
       "title": "DMCA"
     },
     "loadingApp": "Cargando aplicación",
