--- a/src/assets/locales/is-IS.json
+++ b/src/assets/locales/is-IS.json
@@ -1,20 +1,20 @@
 {
   "about": {
-    "description": "movie-web er vefforrit sem leitar á netinu að straumum. Markmið liðsins er naumhyggju nálgun á að horfa á efni.",
+    "description": "WatchTV er vefforrit sem leitar á netinu að straumum. Markmið liðsins er naumhyggju nálgun á að horfa á efni.",
     "faqTitle": "Algengar spurningar",
     "q1": {
-      "body": "movie-web hýsir ekki neitt efni. Þegar þú ýtir á eitthvað til að horfa á, leitað er á netinu fyrir það efni (Þú getur séð hvaða heimild við erum að nota á hleðslu skjánum og í 'myndbands heimildir' flipanum). Skrár eru aldrei settar in af movie-web, allt er í gegnum leitarvél.",
+      "body": "WatchTV hýsir ekki neitt efni. Þegar þú ýtir á eitthvað til að horfa á, leitað er á netinu fyrir það efni (Þú getur séð hvaða heimild við erum að nota á hleðslu skjánum og í 'myndbands heimildir' flipanum). Skrár eru aldrei settar in af WatchTV, allt er í gegnum leitarvél.",
       "title": "Hvaðan kemur efnið?"
     },
     "q2": {
-      "body": "Þú getur ekki beðið um þætti eða myndir, movie-web stýrir ekki neinu efni. Allt efni er skoðað í gegnum heimildir á netinu.",
+      "body": "Þú getur ekki beðið um þætti eða myndir, WatchTV stýrir ekki neinu efni. Allt efni er skoðað í gegnum heimildir á netinu.",
       "title": "Hvar get ég beðið um þætti eða myndir?"
     },
     "q3": {
       "body": "Okkar leitar niðurstöður eru knúnar af The Movie Database (TMDB) og eru sýndar þótt að okkar heimildir hafa ekki efnið.",
       "title": "Leitarniðurstöðurnar sýna þættina eða myndina, af hverju get ég ekki spilað það?"
     },
-    "title": "Um movie-web"
+    "title": "Um WatchTV"
   },
   "actions": {
     "copied": "Afritað",
@@ -80,7 +80,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Fyrirvari",
-      "disclaimerText": "movie-web hýsir engar skrár, það tengist eingöngu þjónustu þriðja aðila. Lagleg atriði ættu að vera rætt við skráarhýsinga og veitanda. movie-web er ekki ábyrg fyrir neinum skrám sýndar af myndbands veitöndum."
+      "disclaimerText": "WatchTV hýsir engar skrár, það tengist eingöngu þjónustu þriðja aðila. Lagleg atriði ættu að vera rætt við skráarhýsinga og veitanda. WatchTV er ekki ábyrg fyrir neinum skrám sýndar af myndbands veitöndum."
     },
     "tagline": "Horfðu á uppáhalds þætti og myndirnar þínar með þessu opna hugbúnaða forriti."
   },
@@ -171,11 +171,11 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "Niðurhalningar eru teknar beint frá heimildini. movie-web hefur engan kraft yfir hvernig niðurhalningarnar eru gefnar.",
+        "disclaimer": "Niðurhalningar eru teknar beint frá heimildini. WatchTV hefur engan kraft yfir hvernig niðurhalningarnar eru gefnar.",
         "downloadPlaylist": "Hlaða niður spilarlista",
         "downloadSubtitle": "Hlaða niður nú verandi texta",
         "downloadVideo": "Hlaða niður myndbandi",
-        "hlsDisclaimer": "Niðurhalningar eru teknar beint frá heimildini. movie-web hefur engan kraft yfir hvernig niðurhalningarnar eru gefnar.<br /><br />Vinsamlegast fattaðu að þú ert að niðurhala HLS spilunarlista, Það er<bold>ekki mælt með að niðurhala ef þú kannt ekki mikið á háþróað streymis sniði.</bold>. Reyndu aðrar heimildir fyrir önnur sniði.",
+        "hlsDisclaimer": "Niðurhalningar eru teknar beint frá heimildini. WatchTV hefur engan kraft yfir hvernig niðurhalningarnar eru gefnar.<br /><br />Vinsamlegast fattaðu að þú ert að niðurhala HLS spilunarlista, Það er<bold>ekki mælt með að niðurhala ef þú kannt ekki mikið á háþróað streymis sniði.</bold>. Reyndu aðrar heimildir fyrir önnur sniði.",
         "onAndroid": {
           "shortTitle": "Hlaða niður / Android",
           "title": "Að hlaða niður á Android"
@@ -292,7 +292,7 @@
       }
     },
     "turnstile": {
-      "description": "Vinsamlegast sannreyndu að þú sért manneskja með því að klára Captcha-ið til hægri. Þetta er til þess að halda movie-web öruggu!",
+      "description": "Vinsamlegast sannreyndu að þú sért manneskja með því að klára Captcha-ið til hægri. Þetta er til þess að halda WatchTV öruggu!",
       "error": "Mistókst að sannreyna að þú sért manneskja. Vinsamlegast reyndu aftur.",
       "title": "Við þurfum að sannræna að þú ert manneskja.",
       "verifyingHumanity": "Að sannræna að þú sért manneskja..."
