--- a/src/assets/locales/it.json
+++ b/src/assets/locales/it.json
@@ -1,20 +1,20 @@
 {
   "about": {
-    "description": "movie-web è un'applicazione web che cerca per gli stream sull'internet. Il team cerca di usare un approccio per lo più minimalista per usufruire del contenuto.",
+    "description": "WatchTV è un'applicazione web che cerca per gli stream sull'internet. Il team cerca di usare un approccio per lo più minimalista per usufruire del contenuto.",
     "faqTitle": "Domande comuni",
     "q1": {
-      "body": "movie-web non ospita alcun contento. Quando clicci su qualcosa da guardare, movie-web cerca l'internet per media di vostra scelta (Sull schermata di caricamento e nell tab 'sorgenti video' si può vedere quale sorgente si sta utilizzando). I media non sono mai caricati da movie-web, tutto è attraverso questo meccanismo di ricerca.",
+      "body": "WatchTV non ospita alcun contento. Quando clicci su qualcosa da guardare, WatchTV cerca l'internet per media di vostra scelta (Sull schermata di caricamento e nell tab 'sorgenti video' si può vedere quale sorgente si sta utilizzando). I media non sono mai caricati da WatchTV, tutto è attraverso questo meccanismo di ricerca.",
       "title": "Da dove arriva il contenuto?"
     },
     "q2": {
-      "body": "Non è possibile richiedere uno show o un film, movie-web non gestisce alcun contenuto. Tutti i contenuti sono visualizzati da sorgenti online.",
+      "body": "Non è possibile richiedere uno show o un film, WatchTV non gestisce alcun contenuto. Tutti i contenuti sono visualizzati da sorgenti online.",
       "title": "Dove posso richiedere una serie o un film?"
     },
     "q3": {
       "body": "Nostri risultati sono alimentati da «The Movie Database (TMDB)» e visualizzare indipendentemente dal fatto che nostri sorgenti hanno effettivamente il contenuto.",
       "title": "I risultati di ricerca mostrano la serie o il film, perché non posso riprodurlo?"
     },
-    "title": "Su di movie-web"
+    "title": "Su di WatchTV"
   },
   "actions": {
     "copied": "Copiato",
@@ -80,7 +80,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Disclaimer",
-      "disclaimerText": "movie-web non ospita qualsiasi file, si collega solo a fonti di terze parti. Se avete problemi legali, rivolgetevi ai file host e ai provider. movie-web non è responsabile per i file multimediali mostrati dai video provider."
+      "disclaimerText": "WatchTV non ospita qualsiasi file, si collega solo a fonti di terze parti. Se avete problemi legali, rivolgetevi ai file host e ai provider. WatchTV non è responsabile per i file multimediali mostrati dai video provider."
     },
     "links": {
       "discord": "Discord",
@@ -90,13 +90,13 @@
     "tagline": "Guardate i vostri preferiti programmi televisivi e film con questo app di streaming open source."
   },
   "global": {
-    "name": "movie-web",
+    "name": "WatchTV",
     "pages": {
-      "about": "Su di movie-web",
+      "about": "Su di WatchTV",
       "dmca": "DMCA",
       "login": "Accedi",
       "onboarding": "Setup",
-      "pagetitle": "{{title}} - movie-web",
+      "pagetitle": "{{title}} - WatchTV",
       "register": "Registrarsi",
       "settings": "Impostazioni"
     }
@@ -152,7 +152,7 @@
       "offline": "Controlla la tua connessione internet"
     },
     "menu": {
-      "about": "Su di movie-web",
+      "about": "Su di WatchTV",
       "donation": "Donare",
       "logout": "Esci",
       "register": "Sincronizzare con il cloud",
@@ -226,7 +226,7 @@
           "title": "Proxy personalizzato"
         }
       },
-      "title": "Configuriamo movie-web"
+      "title": "Configuriamo WatchTV"
     }
   },
   "overlays": {
@@ -242,11 +242,11 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "I download vengono effettuati direttamente dal provider. movie-web non ha il controllo sulle modalità di fornitura dei download.",
+        "disclaimer": "I download vengono effettuati direttamente dal provider. WatchTV non ha il controllo sulle modalità di fornitura dei download.",
         "downloadPlaylist": "Scarica playlist",
         "downloadSubtitle": "Scarica sottotitolo attuale",
         "downloadVideo": "Scarica video",
-        "hlsDisclaimer": "I download vengono effettuati direttamente dal provider. movie-web non ha il controllo sul modo in cui i download vengono forniti.<br /><br />Nota che se state scaricando un playlist HLS, <bold>non è raccomandato di scaricare se non si ha familiarità con i formati di streaming avanzati</bold>. Prova altri sorgenti per diversi formati.",
+        "hlsDisclaimer": "I download vengono effettuati direttamente dal provider. WatchTV non ha il controllo sul modo in cui i download vengono forniti.<br /><br />Nota che se state scaricando un playlist HLS, <bold>non è raccomandato di scaricare se non si ha familiarità con i formati di streaming avanzati</bold>. Prova altri sorgenti per diversi formati.",
         "onAndroid": {
           "1": "Per scaricare su Android, fai clic sul pulsante di scaricare, e poi nella nuova paggina, <bold>toccare e tenere premuto</bold> sul video, e selezionare <bold>salva</bold>.",
           "shortTitle": "Scarica / Android",
@@ -389,7 +389,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Verifica che siate umani completando il Captcha sulla destra. Questo serve a mantenere movie-web sicuro!",
+      "description": "Verifica che siate umani completando il Captcha sulla destra. Questo serve a mantenere WatchTV sicuro!",
       "error": "Impossibile verificare il proprio umanità. Riprova.",
       "title": "Dobbiamo verificare che lei sia umano.",
       "verifyingHumanity": "verificare il proprio umanità..."
@@ -397,7 +397,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "Benvenuti nella pagina di contatto DMCA di movie-web! Rispettiamo i diritti di proprietà intellettuale e vogliamo risolvere rapidamente qualsiasi problema di copyright. Se ritenete che il vostro lavoro protetto da copyright sia stato utilizzato in modo improprio sulla nostra piattaforma, inviate una notizia DMCA all'indirizzo e-mail indicato di seguito. Dovresti includere una descrizione del materiale protetto da copyright, i propri dati di contatto e una dichiarazione di buona fede. Ci impegniamo a risolvere tempestivamente questi problemi e apprezziamo la vostra collaborazione per mantenere movie-web un luogo che rispetta la creatività e i diritti d'autore.",
+      "text": "Benvenuti nella pagina di contatto DMCA di WatchTV! Rispettiamo i diritti di proprietà intellettuale e vogliamo risolvere rapidamente qualsiasi problema di copyright. Se ritenete che il vostro lavoro protetto da copyright sia stato utilizzato in modo improprio sulla nostra piattaforma, inviate una notizia DMCA all'indirizzo e-mail indicato di seguito. Dovresti includere una descrizione del materiale protetto da copyright, i propri dati di contatto e una dichiarazione di buona fede. Ci impegniamo a risolvere tempestivamente questi problemi e apprezziamo la vostra collaborazione per mantenere WatchTV un luogo che rispetta la creatività e i diritti d'autore.",
       "title": "DMCA"
     },
     "loadingApp": "Caricamento dell'applicazione",
