--- a/src/assets/locales/ko.json
+++ b/src/assets/locales/ko.json
@@ -1,20 +1,20 @@
 {
   "about": {
-    "description": "movie-web은 인터넷에서 스트림을 검색하는 웹 애플리케이션입니다. 저희 팀은 콘텐츠 소비에 대한 최소한의 접근 방식을 지향합니다.",
+    "description": "WatchTV은 인터넷에서 스트림을 검색하는 웹 애플리케이션입니다. 저희 팀은 콘텐츠 소비에 대한 최소한의 접근 방식을 지향합니다.",
     "faqTitle": "자주 묻는 질문",
     "q1": {
-      "body": "movie-web은 어떠한 콘텐츠도 호스팅하지 않습니다. 시청할 콘텐츠를 클릭하면 인터넷에서 선택한 미디어가 검색됩니다(로딩 화면과 '비디오 소스' 탭에서 사용 중인 소스를 확인할 수 있습니다). 무비웹에서 미디어를 업로드하지 않으며, 모든 것이 이 검색 메커니즘을 통해 이루어집니다.",
+      "body": "WatchTV은 어떠한 콘텐츠도 호스팅하지 않습니다. 시청할 콘텐츠를 클릭하면 인터넷에서 선택한 미디어가 검색됩니다(로딩 화면과 '비디오 소스' 탭에서 사용 중인 소스를 확인할 수 있습니다). 무비웹에서 미디어를 업로드하지 않으며, 모든 것이 이 검색 메커니즘을 통해 이루어집니다.",
       "title": "콘텐츠의 출처는 어디인가요?"
     },
     "q2": {
-      "body": "프로그램이나 영화를 요청할 수 없으며, movie-web은 어떠한 콘텐츠도 관리하지 않습니다. 모든 콘텐츠는 인터넷의 소스를 통해 볼 수 있습니다.",
+      "body": "프로그램이나 영화를 요청할 수 없으며, WatchTV은 어떠한 콘텐츠도 관리하지 않습니다. 모든 콘텐츠는 인터넷의 소스를 통해 볼 수 있습니다.",
       "title": "프로그램이나 영화는 어디에서 요청할 수 있나요?"
     },
     "q3": {
       "body": "검색 결과는 영화 데이터베이스(TMDB)를 기반으로 하며, 출처에 실제 콘텐츠가 있는지 여부와 관계없이 표시됩니다.",
       "title": "검색 결과에 프로그램이나 영화가 표시되는데 왜 재생할 수 없나요?"
     },
-    "title": "movie-web에 대하여"
+    "title": "WatchTV에 대하여"
   },
   "actions": {
     "copied": "복사되었습니다",
@@ -80,7 +80,7 @@
   "footer": {
     "legal": {
       "disclaimer": "면책 조항",
-      "disclaimerText": "movie-web은 어떠한 파일도 호스팅하지 않으며, 제3자 서비스에 대한 링크만 제공합니다. 법적 문제는 파일 호스트 및 제공업체와 해결해야 합니다. 동영상 제공업체가 표시하는 미디어 파일에 대해 movie-web은 책임을 지지 않습니다."
+      "disclaimerText": "WatchTV은 어떠한 파일도 호스팅하지 않으며, 제3자 서비스에 대한 링크만 제공합니다. 법적 문제는 파일 호스트 및 제공업체와 해결해야 합니다. 동영상 제공업체가 표시하는 미디어 파일에 대해 WatchTV은 책임을 지지 않습니다."
     },
     "tagline": "이 오픈 소스 스트리밍 앱으로 좋아하는 프로그램과 영화를 시청하세요."
   },
@@ -169,11 +169,11 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "다운로드는 제공업체에서 직접 가져옵니다. movie-web은 다운로드 제공 방식을 통제할 수 없습니다.",
+        "disclaimer": "다운로드는 제공업체에서 직접 가져옵니다. WatchTV은 다운로드 제공 방식을 통제할 수 없습니다.",
         "downloadPlaylist": "플레이리스트 다운로드",
         "downloadSubtitle": "현재 자막 다운로드",
         "downloadVideo": "영상 다운로드",
-        "hlsDisclaimer": "다운로드는 제공업체에서 직접 가져옵니다. movie-web은 다운로드 제공 방식을 통제할 수 없습니다. 고급 멀티미디어 스트리밍에 익숙한 사용자를 위한 HLS 재생 목록을 다운로드하고 있다는 점에 유의하세요.",
+        "hlsDisclaimer": "다운로드는 제공업체에서 직접 가져옵니다. WatchTV은 다운로드 제공 방식을 통제할 수 없습니다. 고급 멀티미디어 스트리밍에 익숙한 사용자를 위한 HLS 재생 목록을 다운로드하고 있다는 점에 유의하세요.",
         "onAndroid": {
           "1": "Android에서 다운로드하려면 다운로드 버튼을 클릭한 다음 새 페이지에서 동영상을 <bold>길게 눌러</bold>저장을 선택합니다.",
           "shortTitle": "다운로드 / Android",
@@ -298,7 +298,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "movie-web의 DMCA 문의 페이지에 오신 것을 환영합니다! 당사는 지적 재산권을 존중하며 저작권 관련 문제를 신속하게 해결하고자 합니다. 귀하의 저작권이 있는 저작물이 당사 플랫폼에서 부적절하게 사용되었다고 생각되는 경우, 아래 이메일로 자세한 DMCA 통지를 보내주시기 바랍니다. 저작권이 있는 자료에 대한 설명, 연락처 정보, 선의의 신념을 담은 진술서를 포함하시기 바랍니다. 당사는 이러한 문제를 신속하게 해결하기 위해 최선을 다하고 있으며, movie-web을 창의성과 저작권을 존중하는 공간으로 유지하는 데 협조해 주셔서 감사합니다."
+      "text": "WatchTV의 DMCA 문의 페이지에 오신 것을 환영합니다! 당사는 지적 재산권을 존중하며 저작권 관련 문제를 신속하게 해결하고자 합니다. 귀하의 저작권이 있는 저작물이 당사 플랫폼에서 부적절하게 사용되었다고 생각되는 경우, 아래 이메일로 자세한 DMCA 통지를 보내주시기 바랍니다. 저작권이 있는 자료에 대한 설명, 연락처 정보, 선의의 신념을 담은 진술서를 포함하시기 바랍니다. 당사는 이러한 문제를 신속하게 해결하기 위해 최선을 다하고 있으며, WatchTV을 창의성과 저작권을 존중하는 공간으로 유지하는 데 협조해 주셔서 감사합니다."
     },
     "loadingApp": "애플리케이션 로딩 중",
     "loadingUser": "프로필 로 중",
