--- a/src/assets/locales/ta.json
+++ b/src/assets/locales/ta.json
@@ -1,7 +1,7 @@
 {
   "about": {
     "faqTitle": "பொதுவான கேள்விகள்",
-    "title": "movie-web பற்றி"
+    "title": "WatchTV பற்றி"
   },
   "actions": {
     "copied": "நகலெடுக்கப்பட்டது",
